johan_defconfig: add custom config
Add a custom trimmed configuration that can be used to test SC8280XP
support including the Lenovo ThinkPad X13s, sc8280xp-crd and
sa8295p-adp.

Make sure the initramfs includes any modules required to boot, for
example:

	nvme phy_qcom_qmp_pcie pcie_qcom

for the X13s, and

	phy_qcom_qmp_ufs ufs_qcom

for the CRD with rootfs on UFS.

For keyboard input and (more than 30 seconds of) display in initramfs,
make sure to also include:

	i2c_hid_of i2c_qcom_geni

for keyboard, and

	leds_qcom_lpg pwm_bl
	qrtr pmic_glink_altmode gpio_sbu_mux phy_qcom_qmp_combo
	gpucc_sc8280xp dispcc_sc8280xp
	phy_qcom_edp panel_edp msm

for the display.

For more details see:

	https://github.com/jhovold/linux/wiki/X13s

Not-signed-off-by: Johan Hovold <johan+linaro@kernel.org>

--- a/arch/arm64/configs/johan_defconfig
+++ b/arch/arm64/configs/johan_defconfig
@@ -31,6 +31,7 @@ CONFIG_PROFILING=y
 CONFIG_ARCH_QCOM=y
 # CONFIG_ARM64_ERRATUM_2077057 is not set
 # CONFIG_ARM64_ERRATUM_3194386 is not set
+# CONFIG_ARM64_ERRATUM_3312417 is not set
 # CONFIG_ROCKCHIP_ERRATUM_3588001 is not set
 CONFIG_ARM64_VA_BITS_48=y
 CONFIG_SCHED_MC=y
@@ -113,14 +114,11 @@ CONFIG_PCIE_QCOM=m
 CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
 CONFIG_FW_LOADER_USER_HELPER=y
-CONFIG_FW_LOADER_COMPRESS=y
-CONFIG_FW_LOADER_COMPRESS_ZSTD=y
 # CONFIG_QCOM_EBI2 is not set
 CONFIG_MHI_BUS_PCI_GENERIC=m
 CONFIG_EFI_CAPSULE_LOADER=y
 CONFIG_QCOM_QSEECOM=y
 CONFIG_QCOM_QSEECOM_UEFISECAPP=y
-CONFIG_ZRAM=m
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_NVME=m
 CONFIG_QCOM_FASTRPC=m
@@ -171,6 +169,7 @@ CONFIG_LEGACY_PTY_COUNT=16
 CONFIG_SERIAL_QCOM_GENI=y
 CONFIG_SERIAL_QCOM_GENI_CONSOLE=y
 CONFIG_SERIAL_DEV_BUS=y
+# CONFIG_HW_RANDOM_CN10K is not set
 # CONFIG_DEVPORT is not set
 CONFIG_I2C_CHARDEV=m
 CONFIG_I2C_QCOM_CCI=m
@@ -355,6 +354,7 @@ CONFIG_PHY_QCOM_USB_SNPS_FEMTO_V2=m
 CONFIG_NVMEM_QCOM_QFPROM=y
 CONFIG_NVMEM_SPMI_SDAM=m
 # CONFIG_SLIMBUS is not set
+CONFIG_INTERCONNECT=y
 CONFIG_INTERCONNECT_QCOM=y
 CONFIG_INTERCONNECT_QCOM_OSM_L3=m
 CONFIG_INTERCONNECT_QCOM_SC8280XP=y
