--- a/arch/arm64/configs/johan_defconfig
+++ b/arch/arm64/configs/johan_defconfig
@@ -31,7 +31,6 @@ CONFIG_PROFILING=y
 CONFIG_ARCH_QCOM=y
 # CONFIG_ARM64_ERRATUM_2077057 is not set
 # CONFIG_ARM64_ERRATUM_3194386 is not set
-# CONFIG_ARM64_ERRATUM_3312417 is not set
 # CONFIG_ROCKCHIP_ERRATUM_3588001 is not set
 CONFIG_ARM64_VA_BITS_48=y
 CONFIG_SCHED_MC=y
@@ -53,6 +52,7 @@ CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=m
 CONFIG_CPUFREQ_DT_PLATDEV=y
 CONFIG_ARM_QCOM_CPUFREQ_HW=y
+CONFIG_ARM_SCMI_CPUFREQ=y
 CONFIG_JUMP_LABEL=y
 CONFIG_MODULES=y
 CONFIG_MODULE_UNLOAD=y
@@ -118,9 +118,11 @@ CONFIG_FW_LOADER_COMPRESS=y
 CONFIG_FW_LOADER_COMPRESS_ZSTD=y
 # CONFIG_QCOM_EBI2 is not set
 CONFIG_MHI_BUS_PCI_GENERIC=m
+CONFIG_ARM_SCMI_PROTOCOL=y
 CONFIG_EFI_CAPSULE_LOADER=y
 CONFIG_QCOM_QSEECOM=y
 CONFIG_QCOM_QSEECOM_UEFISECAPP=y
+CONFIG_ZRAM=m
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_NVME=m
 CONFIG_QCOM_FASTRPC=m
@@ -135,12 +137,14 @@ CONFIG_NETDEVICES=y
 CONFIG_WIREGUARD=m
 CONFIG_TUN=y
 CONFIG_VETH=m
+CONFIG_MHI_NET=m
 # CONFIG_ETHERNET is not set
 CONFIG_USB_NET_DRIVERS=m
 CONFIG_USB_RTL8152=m
 # CONFIG_WLAN_VENDOR_ADMTEK is not set
 CONFIG_ATH11K=m
 CONFIG_ATH11K_PCI=m
+CONFIG_ATH12K=m
 # CONFIG_WLAN_VENDOR_ATMEL is not set
 # CONFIG_WLAN_VENDOR_BROADCOM is not set
 # CONFIG_WLAN_VENDOR_INTEL is not set
@@ -171,7 +175,6 @@ CONFIG_LEGACY_PTY_COUNT=16
 CONFIG_SERIAL_QCOM_GENI=y
 CONFIG_SERIAL_QCOM_GENI_CONSOLE=y
 CONFIG_SERIAL_DEV_BUS=y
-# CONFIG_HW_RANDOM_CN10K is not set
 # CONFIG_DEVPORT is not set
 CONFIG_I2C_CHARDEV=m
 CONFIG_I2C_QCOM_CCI=m
@@ -182,9 +185,11 @@ CONFIG_SPMI=y
 CONFIG_PINCTRL_SINGLE=y
 CONFIG_PINCTRL_MSM=y
 CONFIG_PINCTRL_SC8280XP=y
+CONFIG_PINCTRL_X1E80100=y
 CONFIG_PINCTRL_QCOM_SPMI_PMIC=y
 CONFIG_PINCTRL_LPASS_LPI=m
 CONFIG_PINCTRL_SC8280XP_LPASS_LPI=m
+CONFIG_PINCTRL_SM8550_LPASS_LPI=m
 CONFIG_POWER_RESET_QCOM_PON=m
 CONFIG_BATTERY_QCOM_BATTMGR=m
 CONFIG_THERMAL=y
@@ -221,6 +226,7 @@ CONFIG_DRM_MSM=m
 # CONFIG_DRM_MSM_MDP5 is not set
 # CONFIG_DRM_MSM_DSI is not set
 # CONFIG_DRM_MSM_HDMI is not set
+CONFIG_DRM_PANEL_SAMSUNG_ATNA33XC20=m
 CONFIG_DRM_PANEL_EDP=m
 CONFIG_DRM_DISPLAY_CONNECTOR=m
 CONFIG_FB=y
@@ -237,8 +243,10 @@ CONFIG_SND_USB_AUDIO=m
 CONFIG_SND_SOC=m
 CONFIG_SND_SOC_QCOM=m
 CONFIG_SND_SOC_SC8280XP=m
+CONFIG_SND_SOC_X1E80100=m
 CONFIG_SND_SOC_WCD938X_SDW=m
 CONFIG_SND_SOC_WSA883X=m
+CONFIG_SND_SOC_WSA884X=m
 CONFIG_SND_SOC_LPASS_WSA_MACRO=m
 CONFIG_SND_SOC_LPASS_VA_MACRO=m
 CONFIG_SND_SOC_LPASS_RX_MACRO=m
@@ -305,6 +313,10 @@ CONFIG_DMABUF_HEAPS_CMA=y
 # CONFIG_VHOST_MENU is not set
 # CONFIG_SURFACE_PLATFORMS is not set
 CONFIG_COMMON_CLK_QCOM=y
+CONFIG_CLK_X1E80100_CAMCC=y
+CONFIG_CLK_X1E80100_DISPCC=m
+CONFIG_CLK_X1E80100_GPUCC=m
+CONFIG_CLK_X1E80100_TCSRCC=m
 CONFIG_QCOM_CLK_RPMH=y
 CONFIG_SC_CAMCC_8280XP=m
 CONFIG_SC_DISPCC_8280XP=m
@@ -317,6 +329,7 @@ CONFIG_HWSPINLOCK_QCOM=y
 # CONFIG_FSL_ERRATUM_A008585 is not set
 # CONFIG_HISILICON_ERRATUM_161010101 is not set
 CONFIG_MAILBOX=y
+CONFIG_QCOM_CPUCP_MBOX=m
 CONFIG_QCOM_IPCC=y
 CONFIG_ARM_SMMU=y
 CONFIG_ARM_SMMU_V3=y
@@ -347,19 +360,22 @@ CONFIG_IIO=m
 CONFIG_QCOM_SPMI_ADC5=m
 CONFIG_PWM=y
 CONFIG_QCOM_PDC=y
+CONFIG_RESET_GPIO=m
 CONFIG_RESET_QCOM_AOSS=y
 CONFIG_RESET_QCOM_PDC=m
 CONFIG_PHY_QCOM_EDP=m
 CONFIG_PHY_QCOM_QMP=m
 # CONFIG_PHY_QCOM_QMP_PCIE_8996 is not set
+CONFIG_PHY_QCOM_SNPS_EUSB2=m
+CONFIG_PHY_QCOM_EUSB2_REPEATER=m
 CONFIG_PHY_QCOM_USB_SNPS_FEMTO_V2=m
 CONFIG_NVMEM_QCOM_QFPROM=y
 CONFIG_NVMEM_SPMI_SDAM=m
 # CONFIG_SLIMBUS is not set
-CONFIG_INTERCONNECT=y
 CONFIG_INTERCONNECT_QCOM=y
 CONFIG_INTERCONNECT_QCOM_OSM_L3=m
 CONFIG_INTERCONNECT_QCOM_SC8280XP=y
+CONFIG_INTERCONNECT_QCOM_X1E80100=y
 CONFIG_EXT4_FS=y
 CONFIG_EXT4_FS_POSIX_ACL=y
 CONFIG_EXT4_FS_SECURITY=y
