arm64: dts: qcom: sc8280xp: Disable camcc by default
camcc is only used on laptops and should be enabled in the device-specific dts.

Signed-off-by: Jens Glathe <jens.glathe@oldschoolsolutions.biz>

--- a/arch/arm64/boot/dts/qcom/sc8280xp.dtsi
+++ b/arch/arm64/boot/dts/qcom/sc8280xp.dtsi
@@ -4176,6 +4176,8 @@
 			#clock-cells = <1>;
 			#reset-cells = <1>;
 			#power-domain-cells = <1>;
+
+			status = "disabled";
 		};
 
 		mdss0: display-subsystem@ae00000 {
